<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY appname "beskedr.io">]>

<resources>
    <string name="app_name" translatable="false">&appname;</string>

    <!-- Strings for dashboard -->
    <string name="no_messages">You have no messages :(</string>
    <string name="loading_messages">Loading messages…</string>

    <!-- Strings for login -->
    <string name="header_login">Log in to &appname;</string>
    <string name="header_welcome">Welcome to &appname;</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="prompt_register">No account yet? Create an account.</string>
    <string name="toast_login">Logged in</string>
    <string name="login_wait">Logging in…</string>

    <!-- Strings for login errors -->
    <string name="error_login_username_does_not_exist">Username does not exist.</string>
    <string name="error_login_password_wrong">Password is wrong.</string>

    <!-- Strings for register -->
    <string name="prompt_register_header">Register to &appname;</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="btn_register">Register</string>
    <string name="toast_register_error">Error during registration</string>
    <string name="toast_register_success">Registered</string>
    <string name="register_wait">Registering…</string>

    <!-- Strings for registration errors -->
    <string name="error_registration_username_taken">Username is already taken</string>
    <string name="error_registration_username_too_short">Username is too short</string>
    <string name="error_registration_email_invalid">Email is not valid</string>
    <string name="error_registration_name_too_short">Name is too short</string>
    <string name="error_registration_password_too_short">Password is too short</string>

    <!-- Strings for convos -->
    <string name="error_convo_send_message">The message could not be sent.</string>

    <string name="contact_added">added to contacts.</string>

    <!-- Strings for menus -->
    <string name="btn_logout">Log out</string>
    <string name="toast_logout">Logged out</string>

    <!-- Strings for intent extras -->
    <string name="EXTRA_USERNAME" translatable="false">io.beskedr.USERNAME</string>
    <string name="EXTRA_PASSWORD" translatable="false">io.beskedr.PASSWORD</string>
    <string name="EXTRA_OTHER_USER" translatable="false">io.beskedr.OTHER_USER</string>
    <string name="EXTRA_NEW_CONTACT_USER" translatable="false">io.beskedr.NEW_CONTACT_USER</string>


    <string name="prompt_search">Search for a username…</string>
    <string name="prompt_message">Enter a message…</string>

</resources>
